=== (in git)

* Enhancements:
  * Upgraded OpenSSL to version 1.0.0i
  * Upgraded libffi to version 3.0.11

=== 2012-04-21

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 194
  * Upgraded DevKit gdb to version 7.4 (no Python support)
  * Upgraded RubyGems to 1.8.23 on all versions of Ruby
  * Increased file descriptions for 1.9.x to 32K. Closes #104
  * Upgraded OpenSSL to version 1.0.0h

* Cleanup:
  * Removed support for non-functioning DevKit flavors

=== 2012-02-16

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 125
  * Upgraded Ruby 1.8.7 to patchlevel 358
  * Upgraded DevKit autoconf (and wrapper) to version 2.68
  * Upgraded DevKit mintty to version 1.0.3
  * Add mingw-32-4.6.2 toolchain support
  * Upgraded OpenSSL to version 1.0.0g
  * Upgraded DevKit MSYS libiconv (1.14-1) and libintl (0.18.1.1-1)
  * Upgraded RubyGems to 1.8.16 on all versions of Ruby
  * Upgraded DevKit binutils to version 2.22
  * Upgraded DevKit gdb (and deps) to version 7.3.1
  * Removed mingw-32-4.6.1 toolchain support
  * Removed DevKit autoconf 2.13
  * Add DevKit MSYS Korn Shell (mksh) implementation

=== 2011-12-28

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 357
  * Add mingw64-32-4.6.3 toolchain support (ruben's 4.6.3-1 build)
  * Upgraded rb-readline to version 0.4.2
  * Upgraded Tcl/Tk to version 8.5.11
  * Upgraded RubyGems to 1.8.12 on all versions of Ruby
  * Upgraded DevKit mintty to version 1.0.2

=== 2011-10-31

* Enhancements:
  * Add Ruby 1.9.3-p0 as default for `ruby19` task
  * Upgraded rb-readline to version 0.4.1
  * Upgraded DevKit mintty to version 1.0.1
  * Upgraded DevKit binutils to version 2.21.53
  * Upgraded DevKit gdb to version 7.3-2
  * Upgraded libffi to version 3.0.10
  * Upgraded DevKit mingwrt to 3.20
  * Upgraded OpenSSL to version 1.0.0e
  * Add GnuWin32 which.exe to relevant DevKit's
  * Add tdm-32-4.6.1 toolchain support
  * Add mingw-32-4.6.1 toolchain support