@@ -276,8 +276,8 @@ module RubyInstaller
 
     RubyGems = OpenStruct.new(
       :release => 'official',
-      :version => '1.8.23',
-      :url => 'http://rubyforge.org/frs/download.php/76032',
+      :version => '1.8.24',
+      :url => 'http://rubyforge.org/frs/download.php/76073',
       :checkout => 'http://github.com/rubygems/rubygems.git',
       :checkout_target => 'downloads/rubygems',
       :target => 'sandbox/rubygems',
@@ -286,7 +286,7 @@ module RubyInstaller
         '--no-rdoc'
       ],
       :files => [
-        'rubygems-1.8.23.tgz'
+        'rubygems-1.8.24.tgz'
       ],
       :hooks => [
         'resources/rubygems/operating_system.rb'
